[package]
name = "pointer-events"
version.workspace = true
license.workspace = true
edition.workspace = true
description = "A vocabulary crate for working with pointer events."
keywords = ["ui", "pointer", "events"]
categories = ["graphics", "text"]
repository.workspace = true
rust-version.workspace = true

[package.metadata.docs.rs]
all-features = true
# There are no platform specific docs.
default-target = "x86_64-unknown-linux-gnu"
targets = []

[features]
default = ["std"]
std = []

[dependencies]

[lints]
workspace = true
