[package]
name = "ui-events-web"
version.workspace = true
license.workspace = true
edition.workspace = true
description = "A library for bridging ui-events and web"
keywords = ["windowing", "input", "pointer"]
categories = ["graphics", "gui"]
repository.workspace = true
rust-version.workspace = true
publish = false

[package.metadata.docs.rs]
all-features = true
# There are no platform specific docs.
default-target = "x86_64-unknown-linux-gnu"
targets = []

[features]
default = ["std"]
std = []

[dependencies]
ui-events = { workspace = true, features = ["std"] }
web-sys = { version = "0.3.77", default-features = false, features = [
    "KeyboardEvent",
    "MouseEvent",
] }

[lints]
workspace = true
