[package]
name = "ui-events-winit"
version.workspace = true
license.workspace = true
edition.workspace = true
description = "A library for bridging ui-events and winit"
keywords = ["windowing", "input", "pointer"]
categories = ["graphics", "gui"]
repository.workspace = true
rust-version.workspace = true

[package.metadata.docs.rs]
all-features = true
# There are no platform specific docs.
default-target = "x86_64-unknown-linux-gnu"
targets = []

[features]
default = ["std"]
std = []

[dependencies]
ui-events = { workspace = true, features = ["std"] }
winit = {git = "https://github.com/rust-windowing/winit", rev = "d837c88855a4abfee7c21c5f7fd756ac100c5a7a"}

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-time.workspace = true

[lints]
workspace = true
