[package]
name = "ui-events"
version.workspace = true
license.workspace = true
edition.workspace = true
description = "A crate for working with UI events and input types."
keywords = ["ui", "input", "pointer", "events"]
categories = ["graphics", "gui"]
repository.workspace = true
rust-version.workspace = true

[package.metadata.docs.rs]
all-features = true
# There are no platform specific docs.
default-target = "x86_64-unknown-linux-gnu"
targets = []

[features]
default = ["std"]
std = ["dpi/std", "keyboard-types/std", "kurbo?/std"]
libm = ["kurbo?/libm"]
kurbo = ["dep:kurbo"]

[dependencies]
dpi = { workspace = true }
keyboard-types = { version = "0.8.0", default-features = false }
kurbo = { version = "0.13.0", optional = true, default-features = false }

[lints]
workspace = true
