[package]
name = "ui-input-state"
version.workspace = true
license.workspace = true
edition.workspace = true
description = "A crate for stateful tracking of current input state."
keywords = ["ui"]
categories = ["gui"]
repository.workspace = true
rust-version.workspace = true

[package.metadata.docs.rs]
all-features = true
# There are no platform specific docs.
default-target = "x86_64-unknown-linux-gnu"
targets = []

[features]
default = ["std"]
std = ["ui-events/std"]

[dependencies]
ui-events.workspace = true

[lints]
workspace = true
