[package]
name = "ui-theme"
version.workspace = true
license.workspace = true
edition.workspace = true
description = "A crate for working with UI theme types."
keywords = ["ui", "theme"]
categories = ["graphics", "gui"]
repository.workspace = true
rust-version.workspace = true

[package.metadata.docs.rs]
all-features = true
# There are no platform specific docs.
default-target = "x86_64-unknown-linux-gnu"
targets = []

[features]
default = ["std"]
libm = []
std = []

[dependencies]

[lints]
workspace = true
