[package]
name = "simple_web"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
ui-events = { workspace = true }
ui-events-web = { workspace = true }
web-sys = { version = "0.3.82", features = [
    "Window",
    "Document",
    "DomRect",
    "EventTarget",
    "HtmlElement",
    "HtmlInputElement",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "KeyboardEvent",
    "MouseEvent",
    "PointerEvent",
    "WheelEvent",
    "console",
] }
wasm-bindgen = "0.2.92"

[lints]
workspace = true
